--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
 }
 
-group 'camp.nextstep.edu'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -11,16 +11,18 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    testImplementation 'org.assertj:assertj-core:3.16.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+    testImplementation 'org.assertj:assertj-core:3.18.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
 }
 
 compileKotlin {
     kotlinOptions.jvmTarget = '1.8'
 }
+
 compileTestKotlin {
     kotlinOptions.jvmTarget = '1.8'
 }
+
 test {
     useJUnitPlatform()
 }
