--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.21'
+    id 'org.jlleitschuh.gradle.ktlint' version '9.4.1'
 }
 
 group 'org.example'
